--- a/app/src/main/res/layout/nav_header_gestion.xml
+++ b/app/src/main/res/layout/nav_header_gestion.xml
@@ -4,7 +4,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
+    android:layout_height="180dp"
     android:background="@color/colorPrimary"
     android:gravity="bottom"
     android:adjustViewBounds="true"
@@ -36,10 +36,11 @@
 
     <ImageView
        android:id="@+id/imageViewHeaderNavGestion"
-       android:layout_width="80dp"
-       android:layout_height="80dp"
+       android:layout_width="50dp"
+       android:layout_height="50dp"
         android:adjustViewBounds="true"
-       android:cropToPadding="true"
+        android:scaleType="fitXY"
+        android:cropToPadding="true"
        android:src="@drawable/header_image"
        android:layout_gravity="left"
         android:visibility="visible"/>
@@ -50,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
-        android:text="Android Studio"
+        android:text="Fabio A. Sanchez Mejia"
         android:layout_gravity="left"
         android:textColor="#FFFFFF"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
@@ -61,6 +62,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:textColor="#FFFFFF"
-        android:text="android.studio@android.com" />
+        android:text="fasanchez87@gmail.com" />
 
 </LinearLayout>
